Alignment Fixes

--- a/project1.css
+++ b/project1.css
@@ -15,7 +15,7 @@ body{
     position:fixed;
     width:150px;
     height: auto;
-    top: -45px;
+    top: -4px;
 
 }
 .disp{
@@ -75,6 +75,7 @@ div.arrow{
     color: #f00;
     visibility: visible;
 }
+
 .main{
     position: absolute;
     top: -380px;
@@ -92,7 +93,7 @@ div.arrow{
     margin-bottom: 25px;
     max-width: 450px;
     position: absolute;
-    top: -67px;
+    /* top: -67px; */
 }
 h1, p.email, form,  .arrow, .tc{
     margin-left: 30px; 
@@ -112,7 +113,7 @@ input{
     text-align: center;
     width: 333px;
     border-radius: 5px;
-    margin-top: -6px;
+    margin-top: 11px;
 }
 input:hover{
     cursor: text;
@@ -128,9 +129,10 @@ input:focus{
 }
 button[type="submit"]{
     text-align: center;
-    margin: -25px;
-    padding: 7px;;
-    width: 371px;
+    margin-left: 1px;
+    margin-top: 1px;
+    padding: 7px;
+    width: 333px;
     background-image: linear-gradient(#e9c562, #f7e079);
     border-radius: 4px;
     border: 0.15px solid #000;
